2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* build.xml:
	* gen-Configure:
	  remove gen-Configure; implement it in ant; output during build

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  split out more of the jars and compiles

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  always include stubs in classpath for now;
	  see what this does with the Sun compiler
	* src/com/fluendo/jst/Element.java:
	* src/com/fluendo/plugin/AudioSink.java:
	  remove unneeded imports

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  clean up rules further
	  set out.build to a build-type-specific location for all rules
	  add applet and jar rules that build all of them
	  add debug and release targets

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* HACKING:
	* Makefile:
	* build.properties:
	* build.xml:
	  allow for debug and release builds
	  various cleanups, learnt about ant -projecthelp, looks nice now

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/jst/Element.java: (Element):
	* src/com/fluendo/jst/Object.java: (Object):
	* src/com/fluendo/jst/Pad.java: (Pad):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
	(Pipeline.SortedEnumerator.updateDegree):
	* src/com/fluendo/plugin/Sink.java: (Sink.changeState):
	  further compile cleanups

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  make compile-jcraft and jar-jcraft targets and shut up warnings
	  for them

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/codecs/SmokeCodec.java: (SmokeCodec):
	* src/com/fluendo/jheora/DCTDecode.java:
	(DCTDecode.....UpdateUMV_HBorders):
	* src/com/fluendo/jheora/Info.java: (Info._tp_readlsbint):
	* src/com/fluendo/jheora/iDCT.java: (iDCT.IDct10):
	* src/com/fluendo/jst/Element.java: (Element.getPad):